<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

                <item
                    android:id="@+id/nav_Inicio"
                    android:icon="@drawable/icon_inicio"
                    android:title="@string/menu_inicio" />

                <item
                 android:id="@+id/nav_Denuncias"
                 android:icon="@drawable/icon_denuncias"
                 android:title="@string/menu_denuncias" />

                 <item
                     android:id="@+id/nav_Configuracoes"
                     android:icon="@drawable/icon_configuracoes"
                     android:title="@string/menu_configuracoes" />

                 <item
                     android:id="@+id/nav_Sair"
                     android:icon="@drawable/icon_sair"
                     android:title="@string/menu_sair" />
</menu>