<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.unisul.ad3.MainLogin"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorGreenButton"
        app:titleTextColor="@color/colorText"
        app:title="@string/entrar_titulo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="10dp" >

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/entrar_campo_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/campo_customizado"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/entrar_campo_senha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/campo_customizado"
                android:inputType="textPassword"
                android:hint="@string/senha" />

            <Button
                android:id="@+id/entrar_botao_entrar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_customizado_green"
                android:text="@string/entrar"
                android:textColor="@color/colorText" />

            <Button
                android:id="@+id/entrar_botao_registrar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_customizado_red"
                android:text="@string/botao_registrar"
                android:textColor="@color/colorText" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>