<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.unisul.ad3.MainCadastro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:text="@string/registro_infos_login"/>

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/registro_campo_nomecompleto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/campo_customizado"
                android:hint="@string/nomecompleto"
                android:inputType="textPersonName" />

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/registro_campo_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/campo_customizado"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/registro_campo_senha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/campo_customizado"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </LinearLayout>
</LinearLayout>